--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<mat-toolbar color="primary">
-  <button mat-raised-button color="accent" routerLink="/login">Login</button>
+<mat-toolbar color="transparent">
+  <button mat-stroked-button color="primary" routerLink="/login">Login</button>
   &nbsp;&nbsp;
-  <button mat-raised-button color="accent" routerLink="/signup">Signup</button>
+  <button mat-stroked-button color="primary" routerLink="/signup">Signup</button>
 </mat-toolbar>
 
 <router-outlet></router-outlet>
