--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,3 +1,70 @@
-<p>
-  signup works!
-</p>
+<section fxLayout fxLayoutAlign="center">
+
+
+  <div fxLayout class="wrapper">
+
+    <div fxFlex="65%" fxLayout="column" fxLayoutAlign="center center">
+
+      <img src="../../../assets/illustrations/signup.svg" width="50%">
+
+    </div>
+
+    <div fxFlex>
+
+      <mat-card class="login-form">
+
+        <mat-card-title>
+          <img src="../../../assets/text/signup.svg" height="50px">
+        </mat-card-title>
+        <mat-card-content style="padding: 3rem 0">
+
+          <form fxLayout="column">
+
+            <mat-form-field>
+              <input matInput type="text" placeholder="Name">
+            </mat-form-field>
+
+            <mat-form-field>
+              <input matInput type="text" email placeholder="Email">
+            </mat-form-field>
+
+            <mat-form-field>
+              <input matInput type="text" placeholder="Phone Number">
+            </mat-form-field>
+
+            <mat-form-field>
+              <input matInput type="text" placeholder="Date Of Birth">
+            </mat-form-field>
+
+            <mat-form-field>
+              <input matInput type="password" placeholder="Password">
+            </mat-form-field>
+
+            <mat-form-field>
+              <input matInput type="password" placeholder="Confirm Password">
+            </mat-form-field>
+
+            <button mat-raised-button color="primary" style="width: fit-content; margin-top: 3rem; background-color: #17C0EB;">SIGNUP</button>
+
+          </form>
+
+        </mat-card-content>
+
+        <hr />
+
+        <mat-card-actions style="margin-top: 2rem">
+
+          <img src="../../../assets/text/signin_instead.svg" height="40px">
+
+        </mat-card-actions>
+
+      </mat-card>
+
+
+    </div>
+
+  </div>
+
+
+
+</section>
