--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Rubik:300,400,500,700');
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html, body { height: 100%;}
+html {font-size: 62.5%;}
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background: #FCF7F8; }
+.text-link{text-decoration: none; cursor: pointer;}
