Modified login and signup pages

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,3 +1,9 @@
+<div class="header-logo">
+
+  <img src="../../../assets/brand/joined_black.png" height="60px">
+
+</div>
+
 <section fxLayout fxLayoutAlign="center">
 
 
