--- a/src/app/auth/login/login.component.sass
+++ b/src/app/auth/login/login.component.sass
@@ -2,6 +2,11 @@
   width: 75%
   margin-top: 10rem
 
+.header-logo
+  height: 10rem
+  padding: 2rem 0 2rem 10rem
+  display: block
+
 .form-wrapper
   background-color: white
   box-shadow: 0 0 .5rem #B6B6B6
