--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,5 +1,12 @@
-<section fxLayout fxLayoutAlign="center">
 
+<div class="header-logo">
+
+  <img src="../../../assets/brand/joined_black.png" height="60px">
+
+</div>
+
+
+<section fxLayout fxLayoutAlign="center">
 
   <div fxLayout class="wrapper">
 
