--- a/src/app/auth/signup/signup.component.sass
+++ b/src/app/auth/signup/signup.component.sass
@@ -1,6 +1,10 @@
 .wrapper
   width: 75%
-  margin-top: 10rem
+
+.header-logo
+  height: 10rem
+  padding: 2rem 0 2rem 10rem
+  display: block
 
 .form-wrapper
   background-color: white
