Header component initialised

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,2 @@
-<mat-toolbar color="transparent">
-  <button mat-stroked-button color="primary" routerLink="/login">Login</button>
-  &nbsp;&nbsp;
-  <button mat-stroked-button color="primary" routerLink="/signup">Signup</button>
-</mat-toolbar>
-
+<app-header></app-header>
 <router-outlet></router-outlet>
