--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,9 +1,3 @@
-<div class="header-logo">
-
-  <img src="../../../assets/brand/joined_black.png" height="60px">
-
-</div>
-
 <section fxLayout fxLayoutAlign="center">
 
 
@@ -53,8 +47,9 @@
 
         <mat-card-actions style="margin-top: 4rem">
 
-          <img src="../../../assets/text/new_account.svg" height="40px">
-
+          <a routerLink="/signup">
+            <img src="../../../assets/text/new_account.svg" height="40px">
+          </a>
         </mat-card-actions>
 
       </mat-card>
