--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,11 +1,3 @@
-
-<div class="header-logo">
-
-  <img src="../../../assets/brand/joined_black.png" height="60px">
-
-</div>
-
-
 <section fxLayout fxLayoutAlign="center">
 
   <div fxLayout class="wrapper">
@@ -61,8 +53,9 @@
 
         <mat-card-actions style="margin-top: 2rem">
 
-          <img src="../../../assets/text/signin_instead.svg" height="40px">
-
+          <a routerLink="/login">
+            <img src="../../../assets/text/signin_instead.svg" height="40px">
+          </a>
         </mat-card-actions>
 
       </mat-card>
