Impleting the basics of search modules.

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,5 +1,6 @@
-<section fxLayout fxLayoutAlign="center">
+<app-header></app-header>
 
+<section fxLayout fxLayoutAlign="center">
 
   <div fxLayout class="wrapper">
 
