--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,5 +3,5 @@
 
 html, body { height: 100%;}
 html {font-size: 62.5%;}
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background: #FCF7F8; }
+body { margin: 0; font-family: 'rubik', "Helvetica Neue", sans-serif; background: #FCF7F8; }
 .text-link{text-decoration: none; cursor: pointer;}
