Search page implemented

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,14 +1,21 @@
 <header>
     <div class="header-auth" fxLayout="column">
-      <div style="padding: 3rem 10rem;" fxFlex fxLayout fxLayoutAlign="end center" fxLayoutGap="10px">
+      <div style="padding: 3rem 10rem;" fxFlex fxLayout fxLayoutAlign="start center" fxLayoutGap="15px">
+
+        <a routerLink="/">
+          <img src="../../assets/brand/joined_black.png" height="50">
+        </a>
+        <div fxFlex></div>
         <a class="app-nav-link" routerLink="/">My Cart</a>
         <a class="app-nav-link" routerLink="/login">Logout</a>
       </div>
     </div>
 </header>
-<main fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px" style="margin-top: 25rem;">
 
-    <img src="../../assets/brand/joined_black.png" height="80">
+
+<main fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px" style="margin-top: 15rem;">
+
+    <img src="../../assets/text/search.svg" height="115">
 
     <form fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px">
 
@@ -20,6 +27,13 @@
 
     </form>
 
+  <section style="padding: 3rem 0;">
+  <img src="../../assets/text/or.svg" height="20">
+  </section>
+
+        <a routerLink="/">
+          <img src="../../assets/text/upload_button.png">
+        </a>
 
 
 </main>
