deploy bugs fixed

--- a/src/app/search/text-search/text-search.component.html
+++ b/src/app/search/text-search/text-search.component.html
@@ -1,3 +1,13 @@
-<p>
-  text-search works!
-</p>
+<header>
+  <div class="header-auth" fxLayout="column">
+    <div style="padding: 3rem 10rem;" fxFlex fxLayout fxLayoutAlign="start center" fxLayoutGap="15px">
+
+      <a routerLink="/">
+        <img src="../../assets/brand/joined_black.png" height="50">
+      </a>
+      <div fxFlex></div>
+      <a class="app-nav-link" routerLink="/">My Cart</a>
+      <a class="app-nav-link" routerLink="/login">Logout</a>
+    </div>
+  </div>
+</header>
