Prescription preview added.

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -38,7 +38,7 @@
 
             </div>
 
-            <button mat-raised-button color="primary" style="width: fit-content; margin-top: 3rem; background-color: #17C0EB;">LOGIN</button>
+            <button mat-raised-button type="button" routerLink="/" color="primary" style="width: fit-content; margin-top: 3rem; background-color: #17C0EB;">LOGIN</button>
 
           </form>
 
