--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -23,7 +23,7 @@
         <input matInput name="search" ngModel type="text" autocomplete="off">
       </mat-form-field>
 
-      <button mat-stroked-button style="color: #101010; margin-top: 3rem;" color="primary">Search</button>
+      <button mat-stroked-button type="button" routerLink="/search/text" style="color: #101010; margin-top: 3rem;" color="primary">Search</button>
 
     </form>
 
@@ -31,7 +31,7 @@
   <img src="../../assets/text/or.svg" height="20">
   </section>
 
-        <a routerLink="/">
+        <a routerLink="/search/image">
           <img src="../../assets/text/upload_button.png">
         </a>
 
