--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -45,7 +45,7 @@
               <input matInput type="password" placeholder="Confirm Password">
             </mat-form-field>
 
-            <button mat-raised-button color="primary" style="width: fit-content; margin-top: 3rem; background-color: #17C0EB;">SIGNUP</button>
+            <button mat-raised-button type="button" routerLink="/login" color="primary" style="width: fit-content; margin-top: 3rem; background-color: #17C0EB;">SIGNUP</button>
 
           </form>
 
