--- a/src/app/search/image-search/image-search.component.html
+++ b/src/app/search/image-search/image-search.component.html
@@ -1,3 +1,31 @@
-<p>
-  image-search works!
-</p>
+<header>
+  <div class="container">
+    <div class="header-auth" fxLayout="column">
+      <div style="padding: 3rem 0;" fxFlex fxLayout fxLayoutAlign="start center" fxLayoutGap="15px">
+
+        <a routerLink="/">
+          <img src="../../assets/brand/joined_black.png" height="50">
+        </a>
+        <div fxFlex></div>
+        <a class="app-nav-link" routerLink="/">My Cart</a>
+        <a class="app-nav-link" routerLink="/login">Logout</a>
+      </div>
+    </div>
+  </div>
+</header>
+
+<section style="padding: 2rem;">
+  <div class="container">
+    <img src="../../../assets/text/prescription_preview.svg" height="60">
+  </div>
+</section>
+
+<section style="padding: 2rem;">
+
+  <div class="container">
+
+
+
+  </div>
+
+</section>
