--- a/src/app/search/medicine/medicine.component.html
+++ b/src/app/search/medicine/medicine.component.html
@@ -7,7 +7,7 @@
           <img src="../../assets/brand/joined_black.png" height="50">
         </a>
         <div fxFlex></div>
-        <a class="app-nav-link" routerLink="/">My Cart</a>
+        <a class="app-nav-link" routerLink="/cart">My Cart</a>
         <a class="app-nav-link" routerLink="/login">Logout</a>
       </div>
     </div>
