--- a/src/app/search/image-search/image-search.component.html
+++ b/src/app/search/image-search/image-search.component.html
@@ -7,7 +7,7 @@
           <img src="../../assets/brand/joined_black.png" height="50">
         </a>
         <div fxFlex></div>
-        <a class="app-nav-link" routerLink="/">My Cart</a>
+        <a class="app-nav-link" routerLink="/cart">My Cart</a>
         <a class="app-nav-link" routerLink="/login">Logout</a>
       </div>
     </div>
@@ -53,8 +53,8 @@
           <table mat-table
                  [dataSource]="dataSource" multiTemplateDataRows
                  class="mat-elevation-z8">
-            <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
-              <th mat-header-cell *matHeaderCellDef style="font-size: 1.5rem; color: #17C0EB;"> {{column | titlecase}} </th>
+            <ng-container matColumnDef="{{column}}" style="cursor: pointer;" *ngFor="let column of columnsToDisplay">
+              <th mat-header-cell *matHeaderCellDef style="font-size: 1.5rem; color: #7158E2;"> {{column | titlecase}} </th>
               <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
             </ng-container>
 
@@ -85,7 +85,7 @@
 
         </div>
 
-        <button mat-raised-button color="primary" style="margin-right: 1rem; margin-top: 2rem; background-color: #17C0EB;"><mat-icon>shopping_cart</mat-icon>&nbsp;&nbsp;Add To Cart</button>
+        <button mat-raised-button color="primary" style="margin-right: 1rem; margin-top: 3rem; background-color: #17C0EB;"><mat-icon>shopping_cart</mat-icon>&nbsp;&nbsp;Add To Cart</button>
 
 
 
