--- a/src/app/search/text-search/text-search.component.html
+++ b/src/app/search/text-search/text-search.component.html
@@ -17,33 +17,38 @@
 <section style="padding: 2rem;">
   <div class="container">
   <img src="../../../assets/text/searchresults.svg" height="60">
-    <form #queryBox="ngForm">
+    <form (ngSubmit)="getMedicines()">
       <div fxLayout fxLayoutGap="10px" fxLayoutAlign="start center">
       <div style="font-size: 2rem;">for</div>
       <mat-form-field style="min-width: 30rem; font-size: 2rem;">
-         <input matInput required type="text" name="query" value='search query' >
+         <input matInput required type="text" name="query" [(ngModel)]="searchValue" >
       </mat-form-field>
-        <button mat-icon-button style="outline: none;"><mat-icon>search</mat-icon></button>
+        <button mat-icon-button type="submit" style="outline: none;"><mat-icon>search</mat-icon></button>
       </div>
     </form>
   </div>
 </section>
 
-<section style="padding: 2rem;">
+<section style="padding: 2rem; padding-bottom: 10rem;">
 
   <div class="container" fxLayout="row wrap" fxLayoutAlign="start stretch">
 
-    <mat-card fxFlex="45" routerLink="/medicine" style="margin: 10px 20px 10px 0; cursor: pointer;">
+    <div *ngIf="medicines.length == 0" style="width: 100%;" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="20px">
+      <mat-spinner [strokeWidth]="1"></mat-spinner>
+      <span style="color: #B6B6B6; font-size: 2rem;">Please wait while we fetch results for you.</span>
+    </div>
+
+
+
+    <mat-card fxFlex="45" routerLink="/medicine" style="margin: 10px 20px 10px 0; cursor: pointer;" *ngFor="let medicine of medicines">
       <div fxLayout="row">
         <div fxFlex="20" fxLayoutAlign="center center">
-          <img src="../../../assets/text/plus.svg" height="40" />
+          <img src="../../../assets/illustrations/icons8-pill-64.png" height="40" style="fill: #17C0EB;" />
         </div>
         <div fxLayout="column" fxLayoutAlign="start start">
-          <mat-card-title style="color: #1F2421;">
-            <h1>Crocin</h1>
-          </mat-card-title>
+            <p style="font-size: 1.8rem; color: #1F2421; font-weight: 500;">{{ medicine.name }}</p>
           <mat-card-content style="margin-bottom: 5px;">
-            <h3>Rs. 85</h3>
+            <h3> Rs.{{ medicine.price }}</h3>
           </mat-card-content>
         </div>
       </div>
